--- a/SQL-COMPLETE-GUIDE/.vscode/settings.json
+++ b/SQL-COMPLETE-GUIDE/.vscode/settings.json
@@ -10,7 +10,7 @@
       "askForPassword": true,
       "driver": "MySQL",
       "name": "mysql1",
-      "database": "restaurants",
+      "database": "gym",
       "username": "root"
     },
     {
@@ -20,7 +20,7 @@
       "askForPassword": true,
       "driver": "PostgreSQL",
       "name": "postgres1",
-      "database": "restaurants",
+      "database": "gym",
       "username": "postgres"
     }
   ]
